list-address-flex

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     </header>
     <main>
         <!-- SECTION-1 -->
-        <!-- <section class="benefits">
+        <section class="benefits">
             <div class="container container-benefits">
                 <h1 class="title-main">Effective Solutions
                     for Your Business</h1>
                 <button class="button-main" type="button">Order Service</button>
             </div>
-        </section> -->
+        </section>
         <!-- SECTION-2 -->
 
         <!-- <section class="content">
