--- a/index.html
+++ b/index.html
@@ -474,31 +474,33 @@
             </ul>
             <address class="mobile-menu-address">
                 <ul class="mobile-menu-list-address">
-                    
-                    <li class="mobile-menu-address-item"><a class="mobile-menu-address-link active-address" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                    <li class="mobile-menu-address-item"><a class="mobile-menu-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+
+                    <li class="mobile-menu-address-item"><a class="mobile-menu-address-link active-address"
+                            href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                    <li class="mobile-menu-address-item"><a class="mobile-menu-address-link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 </ul>
             </address>
             <ul class="list-social">
-                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial"
-                            width="24" height="24">
+                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
+                            height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg></a>
                 </li>
 
-                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial"
-                            width="24" height="24">
+                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
+                            height="24">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg></a>
                 </li>
-                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial"
-                            width="24" height="24">
+                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
+                            height="24">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg></a>
                 </li>
 
-                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial"
-                            width="24" height="24">
+                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
+                            height="24">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg></a>
                 </li>
