--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </section>
         <!-- SECTION-2 -->
 
-        <!-- <section class="content">
+        <section class="content">
             <div class="container container-content">
                 <h2 class="visually-hidden">Effective Solutions
                     for Your Business</h2>
@@ -114,8 +114,10 @@
                 </ul>
 
             </div>
-        </section> -->
+        </section>
+
         <!-- SECTION-3 -->
+
         <!-- <section class="our-time">
             <div class="container">
                 <h2 class="title-timee">Our Team</h2>
