--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
 
         <!-- SECTION-3 -->
 
-        <!-- <section class="our-time">
+        <section class="our-time">
             <div class="container">
                 <h2 class="title-timee">Our Team</h2>
                 <ul class="list">
                     <li class="list-time">
-                        <img src="./images/mark.jpg" alt="photo" width="264">
+                        <img srcset="./images/mark@2x.jpg 2x"
+                        src="./images/mark.jpg" alt="photo" width="264">
                         <div class="person">
                             <h3 class="title-time">Mark Guerrero</h3>
                             <p class="job">Product Designer</p>
@@ -155,7 +156,8 @@
 
                         </div>
 
-                    <li class="list-time"><img src="./images/tom.jpg" alt="photo" width="264">
+                    <li class="list-time"><img srcset="./images/tom@2x.jpg 2x"
+                        src="./images/tom.jpg" alt="photo" width="264">
                         <div class="person">
                             <h3 class="title-time">Tom Ford</h3>
                             <p class="job">Frontend Developer</p>
@@ -188,7 +190,8 @@
                         </div>
                     </li>
                     <li class="list-time">
-                        <img src="./images/camila.jpg" alt="photo" width="264">
+                        <img srcset="./images/camila@2x.jpg 2x"
+                        src="./images/camila.jpg" alt="photo" width="264">
                         <div class="person">
                             <h3 class="title-time">Camila Garcia</h3>
                             <p class="job">Marketing</p>
@@ -224,7 +227,8 @@
                     </li>
 
                     <li class="list-time">
-                        <img src="./images/daniel.jpg" alt="photo" width="264">
+                        <img srcset="./images/danial@2x.jpg 2x"
+                        src="./images/daniel.jpg" alt="photo" width="264">
                         <div class="person">
                             <h3 class="title-time">Daniel Wilson</h3>
                             <p class="job">UI Designer</p>
@@ -259,7 +263,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- SECTION-4 -->
         <!-- <section class="our-portfolio">
