--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                             <picture>
                                 <source srcset="./images/online.jpg 1x, ./images/online-desk@2x.jpg 2x"
                                     media="(min-width:1158px)" />
-                                <source srcset="./images/online-tabl.jpg 1x, ./images/online-tabl@2x.jpg 2x"
+                                <source srcset="./images/online-tabl.jpg 1x, ./images/online-tab@2x.jpg 2x"
                                     media="(min-width:768px)" />
                                 <source srcset="./images/online-mob.jpg 1x, ./images/online-mob@2x.jpg 2x"
                                     media="(min-width:320px)" />
