--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                             <picture>
                                 <source srcset="./images/online.jpg 1x, ./images/online-desk@2x.jpg 2x"
                                     media="(min-width:1158px)" />
-                                <source srcset="./images/online-tabl.jpg 1x, ./images/online-tab@2x.jpg 2x"
+                                <source srcset="./images/online-tabl.jpg 1x, ./images/online-tabl@2x.jpg 2x"
                                     media="(min-width:768px)" />
                                 <source srcset="./images/online-mob.jpg 1x, ./images/online-mob@2x.jpg 2x"
                                     media="(min-width:320px)" />
@@ -404,16 +404,16 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <!-- <footer class="contact">
+    <footer class="contact">
         <div class="container container-footer">
             <div class="footer-contact">
                 <a class="logo-footer" href="./index.html">web<span class="studio">Studio</span> </a>
-
+</div>
                 <p class="content-footer">Increase the flow of customers and sales for your business with digital
                     marketing
                     &
                     growth solutions.</p>
-            </div>
+            
 
             <div class="social-media">
 
@@ -461,7 +461,7 @@
             </div>
         </div>
 
-    </footer> -->
+    </footer>
 
     <!-- MODAL -->
     <!-- <div class="backdrop">
