--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     </footer>
 
     <!-- MODAL -->
-    <!-- <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
             <button class="modal-close-btn" type="button">
                 <svg class="modal-close-icon" width="8" height="8" aria-label="close-icon">
@@ -521,7 +521,7 @@
                 <button type="submit" class="modal-btn">Send</button>
             </form>
         </div>
-    </div> -->
+    </div>
     <div class="mobile-menu">
         <div class="container mobile-menu-container">
             <button class="mobile-menu-close-btn" type="button">
