--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     </footer>
 
     <!-- MODAL -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button class="modal-close-btn" type="button">
                 <svg class="modal-close-icon" width="8" height="8" aria-label="close-icon">
