--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             </form>
         </div>
     </div>
-    <div class="mobile-menu">
+    <div class="mobile-menu is-open">
         <div class="container mobile-menu-container">
             <button class="mobile-menu-close-btn" type="button">
                 <svg class="mobile-menu-close-icon" width="8" height="8" aria-label="close-icon">
@@ -543,7 +543,7 @@
                             href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 </ul>
             </address>
-            <ul class="list-social">
+            <ul class="list-social-mob">
                 <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
                             height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
