--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                     media="(min-width:768px)" />
                                 <source srcset="./images/cash-mob.jpg 1x, ./images/cash-mob@2x.jpg 2x"
                                     media="(min-width:320px)" />
-                                    <img src="./images/pay.jpg" alt="pay">
+                                <img src="./images/pay.jpg" alt="pay">
 
                             </picture>
                             <p class="text-card">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
@@ -318,10 +318,10 @@
                                     media="(min-width:768px)" />
                                 <source srcset="./images/medit-mob.jpg 1x, ./images/medit-mob@2x.jpg 2x"
                                     media="(min-width:320px)" />
-                                    <img src="./images/madi.jpg" alt="banking">
+                                <img src="./images/madi.jpg" alt="banking">
 
                             </picture>
-                            
+
                             <p class="text-card">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                                 Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -340,10 +340,10 @@
                                     media="(min-width:768px)" />
                                 <source srcset="./images/taxi-mob.jpg 1x, ./images/taxi-mob@2x.jpg 2x"
                                     media="(min-width:320px)" />
-                                    <img src="./images/taxi.jpg" alt="banking" >
+                                <img src="./images/taxi.jpg" alt="banking">
 
                             </picture>
-                            
+
                             <p class="text-card">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
                                 Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
@@ -362,7 +362,7 @@
                                     media="(min-width:768px)" />
                                 <source srcset="./images/screen-mob.jpg 1x, ./images/screen-mob@2x.jpg 2x"
                                     media="(min-width:320px)" />
-                                    <img src="./images/screen.jpg" alt="banking">
+                                <img src="./images/screen.jpg" alt="banking">
 
 
                             </picture>
@@ -385,7 +385,7 @@
                                     media="(min-width:768px)" />
                                 <source srcset="./images/online-mob.jpg 1x, ./images/online-mob@2x.jpg 2x"
                                     media="(min-width:320px)" />
-                                    <img src="./images/online.jpg" alt="banking">
+                                <img src="./images/online.jpg" alt="banking">
 
 
 
@@ -504,7 +504,8 @@
                 </div>
                 <div class="modal-form-block-textarea">
                     <label class="modal-form-label" for="user-comment">Comment</label>
-                    <textarea class="modal-form-textarea" name="user-comment" id="user-comment" required placeholder="Text input"></textarea>
+                    <textarea class="modal-form-textarea" name="user-comment" id="user-comment" required
+                        placeholder="Text input"></textarea>
                 </div>
                 <div class="modal-form-checkbox ">
                     <input class="modal-checkbox visually-hidden" type="checkbox" name="user-privacy" id="user-privacy"
@@ -522,7 +523,8 @@
             </form>
         </div>
     </div>
-    <div class="mobile-menu ">
+    <!-- MOBILE MENU -->
+    <div class="mobile-menu is-open">
         <div class="container mobile-menu-container">
             <button class="mobile-menu-close-btn" type="button">
                 <svg class="mobile-menu-close-icon" width="8" height="8" aria-label="close-icon">
@@ -534,39 +536,42 @@
                 <li class="mobile-menu-item"><a class="mobile-menu-link" href="">Portfolio</a></li>
                 <li class="mobile-menu-item"><a class="mobile-menu-link" href="">Contacts</a></li>
             </ul>
-            <address class="mobile-menu-address">
-                <ul class="mobile-menu-list-address">
 
-                    <li class="mobile-menu-address-item"><a class="mobile-menu-address-link active-address"
-                            href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-                    <li class="mobile-menu-address-item"><a class="mobile-menu-address-link"
-                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <div class="menu-footer">
+                <address class="mobile-menu-address">
+                    <ul class="mobile-menu-list-address">
+
+                        <li class="mobile-menu-address-item"><a class="mobile-menu-address-link active-address"
+                                href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                        <li class="mobile-menu-address-item"><a class="mobile-menu-address-link"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    </ul>
+                </address>
+                <ul class="list-social-mob">
+                    <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg></a>
+                    </li>
+
+                    <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a>
+                    </li>
+                    <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+
+                    <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
+                                height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
                 </ul>
-            </address>
-            <ul class="list-social-mob">
-                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></a>
-                </li>
-
-                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></a>
-                </li>
-                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></a>
-                </li>
-
-                <li class="list-icons"><a href="" class="icon-cocial-link"><svg class="icon-cocial" width="24"
-                            height="24">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></a>
-                </li>
-            </ul>
+            </div>
 
         </div>
     </div>
