--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
     </div>
     <!-- MOBILE MENU -->
     <div class="mobile-menu is-open">
-        <div class="container mobile-menu-container">
+        <div class="mobile-menu-container">
             <button class="mobile-menu-close-btn" type="button">
                 <svg class="mobile-menu-close-icon" width="8" height="8" aria-label="close-icon">
                     <use href="./images/icons.svg#icon-modal-close"></use>
