--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
         </div>
     </div>
     <!-- MOBILE MENU -->
-    <div class="mobile-menu is-open">
+    <div class="mobile-menu">
         <div class="mobile-menu-container">
             <button class="mobile-menu-close-btn" type="button">
                 <svg class="mobile-menu-close-icon" width="8" height="8" aria-label="close-icon">
